@startuml
title Contracts in Domain

left to right direction
skinparam packageStyle rectangle
skinparam shadowing false

package "Application" {
    class "ProjectService" as ProjectService
}

package "Domain" {
    interface "IProjectRepository" as IProjectRepository
}

package "Infrastructure" {
    class "ProjectRepository" as ProjectRepository
}

ProjectService --> IProjectRepository
ProjectRepository ..|> IProjectRepository

@enduml